sim: add dimension check, fix printing function

--- a/ane.ipynb
+++ b/ane.ipynb
@@ -66,6 +66,8 @@
     "        s = Sentence(sentence)\n",
     "        embeddings.embed(s)\n",
     "\n",
+    "        assert q.embedding.shape == s.embedding.shape\n",
+    "        \n",
     "        cos = torch.nn.CosineSimilarity(dim=0, eps=1e-6)\n",
     "        prox = cos(q.embedding, s.embedding)\n",
     "    \n",
@@ -78,9 +80,6 @@
     "    print(f\"Example: {gold}\")\n",
     "    \n",
     "    for sentence, similarity in zip(sim_sentences, similarities) :\n",
-    "        s = Sentence(sentence)\n",
-    "        embeddings.embed(s)\n",
-    "        \n",
     "        print(f\"{sentence} - {similarity}\")\n",
     "    \n",
     "    print(\"\")\n",
