--- a/calc_similarities.ipynb
+++ b/calc_similarities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gold_filename = \"goldstandard_baskisch.csv\"\n",
+    "gold_filename = \"goldstandard_eu.tsv\"\n",
     "\n",
     "def get_gold_sentences(filename):\n",
     "    gold_sentences = {}\n",
@@ -31,20 +31,24 @@
     "                continue\n",
     "            \n",
     "            line = line.rstrip()\n",
-    "\n",
     "            line = line.replace('\"', '')\n",
-    "            \n",
     "            splitted = line.split('\\t')\n",
-    "            \n",
     "            gold = splitted[0]\n",
-    "            \n",
     "            sim_sentences = splitted[1:11]\n",
     "            \n",
     "            if gold:\n",
     "                gold_sentences[gold] = sim_sentences\n",
     "            \n",
-    "    return gold_sentences\n",
-    "\n"
+    "    return gold_sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_sentences = get_gold_sentences(gold_filename)"
    ]
   },
   {
@@ -94,7 +98,6 @@
    "source": [
     "# Change code here ;)\n",
     "\n",
-    "gold_sentences = get_gold_sentences(gold_filename)\n",
     "\n",
     "flair_embeddings = DocumentPoolEmbeddings([FlairEmbeddings('eu-forward'), \n",
     "                                     FlairEmbeddings('eu-backward')\n",
@@ -134,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
