Added info to add plotly api key

--- a/calc_similarities.ipynb
+++ b/calc_similarities.ipynb
@@ -573,8 +573,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## You ne\n",
-    "https://plot.ly/python/getting-started/#initialization-for-online-plotting"
+    "### [You need an account in plotly and an API key](https://plot.ly/python/getting-started/#initialization-for-online-plotting)\n",
+    "\n",
+    "Then just add:\n",
+    "\n",
+    "`plotly.tools.set_credentials_file(username='my_username', api_key='my_apikey')`"
    ]
   },
   {
