slight cell reordering in notebook

--- a/calc_similarities.ipynb
+++ b/calc_similarities.ipynb
@@ -48,93 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Read file and extract sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "test_eu = \"goldstandard_eu_lexicover.tsv\"\n",
-    "test_en = \"goldstandard_en_lexicover.tsv\"\n",
-    "\n",
-    "def get_gold_sentences(filename):\n",
-    "    gold_sentences = []\n",
-    "    with open(filename, 'rt') as f_p:\n",
-    "        for line in f_p:\n",
-    "            if line.startswith('\"origin\"'): # header\n",
-    "                continue\n",
-    "            \n",
-    "            if not line:\n",
-    "                continue\n",
-    "            \n",
-    "            line = line.rstrip()\n",
-    "            line = line.replace('\"', '')\n",
-    "            splitted = line.split('\\t')\n",
-    "            gold = splitted[0]\n",
-    "            sim_sentences = splitted[1:11]\n",
-    "            \n",
-    "            if gold:\n",
-    "                gold_sentences_simple = {}\n",
-    "                gold_sentences_simple[gold] = sim_sentences\n",
-    "                gold_sentences.append(gold_sentences_simple)\n",
-    "            \n",
-    "    return gold_sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sent_eu = get_gold_sentences(test_eu)\n",
-    "sent_en = get_gold_sentences(test_en)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def initialize_vectors(sent):\n",
-    "    similarities_all = []\n",
-    "    for i in range(len(sent)):\n",
-    "        similarities_all.append([])\n",
-    "\n",
-    "    scores_all = []\n",
-    "    for i in range(len(sent)):\n",
-    "        scores_all.append([])\n",
-    "        \n",
-    "    return similarities_all, scores_all"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "similarities_all_eu, scores_all_eu = initialize_vectors(sent_eu)\n",
-    "similarities_all_en, scores_all_en = initialize_vectors(sent_en)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Load flair, BERT cased, BERT uncased embeddings"
+    "## 1. Load flair, BERT cased, BERT uncased embeddings"
    ]
   },
   {
@@ -199,6 +113,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2. Read file and extract sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "test_eu = \"goldstandard_eu_lexicover.tsv\"\n",
+    "test_en = \"goldstandard_en_lexicover.tsv\"\n",
+    "\n",
+    "def get_gold_sentences(filename):\n",
+    "    gold_sentences = []\n",
+    "    with open(filename, 'rt') as f_p:\n",
+    "        for line in f_p:\n",
+    "            if line.startswith('\"origin\"'): # header\n",
+    "                continue\n",
+    "            \n",
+    "            if not line:\n",
+    "                continue\n",
+    "            \n",
+    "            line = line.rstrip()\n",
+    "            line = line.replace('\"', '')\n",
+    "            splitted = line.split('\\t')\n",
+    "            gold = splitted[0]\n",
+    "            sim_sentences = splitted[1:11]\n",
+    "            \n",
+    "            if gold:\n",
+    "                gold_sentences_simple = {}\n",
+    "                gold_sentences_simple[gold] = sim_sentences\n",
+    "                gold_sentences.append(gold_sentences_simple)\n",
+    "            \n",
+    "    return gold_sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "sent_eu = get_gold_sentences(test_eu)\n",
+    "sent_en = get_gold_sentences(test_en)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def initialize_vectors(sent):\n",
+    "    similarities_all = []\n",
+    "    for i in range(len(sent)):\n",
+    "        similarities_all.append([])\n",
+    "\n",
+    "    scores_all = []\n",
+    "    for i in range(len(sent)):\n",
+    "        scores_all.append([])\n",
+    "        \n",
+    "    return similarities_all, scores_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "similarities_all_eu, scores_all_eu = initialize_vectors(sent_eu)\n",
+    "similarities_all_en, scores_all_en = initialize_vectors(sent_en)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Calculate similarities"
    ]
   },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {
     "scrolled": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +360,7 @@
         {
          "colorscale": "Blues",
          "type": "heatmap",
-         "uid": "f508a8a7-2633-47b8-94fe-7193afa3f6b8",
+         "uid": "870cf2d2-9d8c-4bd2-836e-bd29dc4ca46c",
          "y": [
           "flair",
           "bert_cased",
@@ -412,21 +412,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"b73f0c44-1669-462f-bd0e-2fc5b56c7ae7\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"dea27199-8d45-4662-a5db-a6b95f8fabe1\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"b73f0c44-1669-462f-bd0e-2fc5b56c7ae7\")) {\n",
+       "                if (document.getElementById(\"dea27199-8d45-4662-a5db-a6b95f8fabe1\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        'b73f0c44-1669-462f-bd0e-2fc5b56c7ae7',\n",
-       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"f508a8a7-2633-47b8-94fe-7193afa3f6b8\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.9597, 0.9283, 0.6528, 0.8803, 0.8831, 0.7409, 0.9736, 0.7472, 0.5672, 0.4903], [0.9842, 0.9879, 0.9237, 0.9593, 0.9216, 0.9599, 0.9599, 0.9452, 0.8261, 0.8404], [0.9823, 0.978, 0.9265, 0.9406, 0.9571, 0.9711, 0.9908, 0.9738, 0.7873, 0.8676]]}],\n",
+       "                        'dea27199-8d45-4662-a5db-a6b95f8fabe1',\n",
+       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"870cf2d2-9d8c-4bd2-836e-bd29dc4ca46c\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.9597, 0.9283, 0.6528, 0.8803, 0.8831, 0.7409, 0.9736, 0.7472, 0.5672, 0.4903], [0.9842, 0.9879, 0.9237, 0.9593, 0.9216, 0.9599, 0.9599, 0.9452, 0.8261, 0.8404], [0.9823, 0.978, 0.9265, 0.9406, 0.9571, 0.9711, 0.9908, 0.9738, 0.7873, 0.8676]]}],\n",
        "                        {},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('b73f0c44-1669-462f-bd0e-2fc5b56c7ae7');\n",
+       "var gd = document.getElementById('dea27199-8d45-4662-a5db-a6b95f8fabe1');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -465,47 +465,47 @@
       "English\n",
       "the doctor invited the patient for lunch\n",
       "\n",
-      "0. the doctor invited the patient for dinner\n",
-      "\t flair similarity: 0.979\n",
-      "\t bert_cased similarity: 0.9943\n",
-      "\t bert_uncased similarity: 0.9781\n",
-      "1. the doctor has invited the patient for lunch\n",
-      "\t flair similarity: 0.9799\n",
-      "\t bert_cased similarity: 0.9846\n",
-      "\t bert_uncased similarity: 0.9366\n",
-      "2. the doctor told the patient, they would get better\n",
-      "\t flair similarity: 0.7886\n",
-      "\t bert_cased similarity: 0.9407\n",
-      "\t bert_uncased similarity: 0.8225\n",
-      "3. the teacher invited the student for lunch\n",
-      "\t flair similarity: 0.9567\n",
-      "\t bert_cased similarity: 0.9468\n",
-      "\t bert_uncased similarity: 0.8718\n",
-      "4. the firefighter invited the scientist for lunch\n",
-      "\t flair similarity: 0.9466\n",
-      "\t bert_cased similarity: 0.973\n",
-      "\t bert_uncased similarity: 0.9007\n",
-      "5. the patient did not invite the doctor for lunch\n",
-      "\t flair similarity: 0.9127\n",
-      "\t bert_cased similarity: 0.9667\n",
-      "\t bert_uncased similarity: 0.8959\n",
-      "6. the patient invited the doctor for lunch\n",
+      "0. the patient invited the doctor for lunch\n",
       "\t flair similarity: 0.9852\n",
       "\t bert_cased similarity: 0.9965\n",
       "\t bert_uncased similarity: 0.984\n",
-      "7. patient invited the lunch the for doctor\n",
-      "\t flair similarity: 0.9022\n",
-      "\t bert_cased similarity: 0.9452\n",
-      "\t bert_uncased similarity: 0.7127\n",
-      "8. eth roctod ivtedni hte pietant fro chunl\n",
-      "\t flair similarity: 0.4821\n",
-      "\t bert_cased similarity: 0.773\n",
-      "\t bert_uncased similarity: 0.4075\n",
+      "1. the doctor invited the patient for dinner\n",
+      "\t flair similarity: 0.979\n",
+      "\t bert_cased similarity: 0.9943\n",
+      "\t bert_uncased similarity: 0.9781\n",
+      "2. the doctor has invited the patient for lunch\n",
+      "\t flair similarity: 0.9799\n",
+      "\t bert_cased similarity: 0.9846\n",
+      "\t bert_uncased similarity: 0.9366\n",
+      "3. the patient did not invite the doctor for lunch\n",
+      "\t flair similarity: 0.9127\n",
+      "\t bert_cased similarity: 0.9667\n",
+      "\t bert_uncased similarity: 0.8959\n",
+      "4. the doctor examined the patient before lunch\n",
+      "\t flair similarity: 0.9134\n",
+      "\t bert_cased similarity: 0.9579\n",
+      "\t bert_uncased similarity: 0.8866\n",
+      "5. the doctor thought of inviting the patient for lunch\n",
+      "\t flair similarity: 0.9302\n",
+      "\t bert_cased similarity: 0.9763\n",
+      "\t bert_uncased similarity: 0.8961\n",
+      "6. having lunch was not important for the patient and the doctor\n",
+      "\t flair similarity: 0.8328\n",
+      "\t bert_cased similarity: 0.9275\n",
+      "\t bert_uncased similarity: 0.7899\n",
+      "7. despite having lunch together, the patient did not like the doctor\n",
+      "\t flair similarity: 0.8063\n",
+      "\t bert_cased similarity: 0.9369\n",
+      "\t bert_uncased similarity: 0.8018\n",
+      "8. the surgeon proposed a snack to the sick person\n",
+      "\t flair similarity: 0.8322\n",
+      "\t bert_cased similarity: 0.951\n",
+      "\t bert_uncased similarity: 0.8397\n",
       "9. let me help you with that suitcase\n",
       "\t flair similarity: 0.6245\n",
       "\t bert_cased similarity: 0.8512\n",
       "\t bert_uncased similarity: 0.4863\n",
-      "Scores: flair: 5, bert_cased: 5, bert_uncased: 5\n"
+      "Scores: flair: 5, bert_cased: 6, bert_uncased: 6\n"
      ]
     },
     {
@@ -520,7 +520,7 @@
         {
          "colorscale": "Blues",
          "type": "heatmap",
-         "uid": "a221523f-9bb9-47ec-ae3c-b3cf77d88570",
+         "uid": "6bca7330-948b-4fff-9d9d-6acbac4315d7",
          "y": [
           "flair",
           "bert_cased",
@@ -528,39 +528,39 @@
          ],
          "z": [
           [
+           0.9852,
            0.979,
            0.9799,
-           0.7886,
-           0.9567,
-           0.9466,
            0.9127,
-           0.9852,
-           0.9022,
-           0.4821,
+           0.9134,
+           0.9302,
+           0.8328,
+           0.8063,
+           0.8322,
            0.6245
           ],
           [
+           0.9965,
            0.9943,
            0.9846,
-           0.9407,
-           0.9468,
-           0.973,
            0.9667,
-           0.9965,
-           0.9452,
-           0.773,
+           0.9579,
+           0.9763,
+           0.9275,
+           0.9369,
+           0.951,
            0.8512
           ],
           [
+           0.984,
            0.9781,
            0.9366,
-           0.8225,
-           0.8718,
-           0.9007,
            0.8959,
-           0.984,
-           0.7127,
-           0.4075,
+           0.8866,
+           0.8961,
+           0.7899,
+           0.8018,
+           0.8397,
            0.4863
           ]
          ]
@@ -572,21 +572,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"1d99b3bd-214e-4772-ada4-3e57caf1f384\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"01c3d81e-d710-43c3-bb14-375f5ce7240a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"1d99b3bd-214e-4772-ada4-3e57caf1f384\")) {\n",
+       "                if (document.getElementById(\"01c3d81e-d710-43c3-bb14-375f5ce7240a\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '1d99b3bd-214e-4772-ada4-3e57caf1f384',\n",
-       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"a221523f-9bb9-47ec-ae3c-b3cf77d88570\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.979, 0.9799, 0.7886, 0.9567, 0.9466, 0.9127, 0.9852, 0.9022, 0.4821, 0.6245], [0.9943, 0.9846, 0.9407, 0.9468, 0.973, 0.9667, 0.9965, 0.9452, 0.773, 0.8512], [0.9781, 0.9366, 0.8225, 0.8718, 0.9007, 0.8959, 0.984, 0.7127, 0.4075, 0.4863]]}],\n",
+       "                        '01c3d81e-d710-43c3-bb14-375f5ce7240a',\n",
+       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"6bca7330-948b-4fff-9d9d-6acbac4315d7\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.9852, 0.979, 0.9799, 0.9127, 0.9134, 0.9302, 0.8328, 0.8063, 0.8322, 0.6245], [0.9965, 0.9943, 0.9846, 0.9667, 0.9579, 0.9763, 0.9275, 0.9369, 0.951, 0.8512], [0.984, 0.9781, 0.9366, 0.8959, 0.8866, 0.8961, 0.7899, 0.8018, 0.8397, 0.4863]]}],\n",
        "                        {},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('1d99b3bd-214e-4772-ada4-3e57caf1f384');\n",
+       "var gd = document.getElementById('01c3d81e-d710-43c3-bb14-375f5ce7240a');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
