added elmo embeddings

--- a/calc_similarities.ipynb
+++ b/calc_similarities.ipynb
@@ -36,7 +36,7 @@
     "import torch\n",
     "\n",
     "from flair.data import Sentence\n",
-    "from flair.embeddings import DocumentPoolEmbeddings, FlairEmbeddings, BertEmbeddings\n",
+    "from flair.embeddings import DocumentPoolEmbeddings, FlairEmbeddings, BertEmbeddings, ELMoEmbeddings\n",
     "\n",
     "import plotly\n",
     "import plotly.graph_objs as go\n",
@@ -48,25 +48,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Load flair, BERT cased, BERT uncased embeddings"
+    "## 1. Load embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# [[flair_eu, bert_cased_eu, bert_uncased eu], [flair_en, bert_cased_en, bert_uncased en]]\n",
+    "# [[flair_eu, bert_cased_eu, bert_uncased eu, elmo_eu], [flair_en, bert_cased_en, bert_uncased en, elmo_en]]\n",
     "embeddings_all = [[], []]\n",
-    "embedding_names = [\"flair\", \"bert_cased\", \"bert_uncased\"]"
+    "embedding_names = [\"flair\", \"bert_cased\", \"bert_uncased\", \"elmo\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -79,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-07-05 16:59:59,104 The pre-trained model you are loading is a cased model but you have not set `do_lower_case` to False. We are setting `do_lower_case=False` for you but you may want to check this behavior.\n",
-      "2019-07-05 17:00:55,218 The pre-trained model you are loading is a cased model but you have not set `do_lower_case` to False. We are setting `do_lower_case=False` for you but you may want to check this behavior.\n"
+      "2019-07-09 11:29:24,276 The pre-trained model you are loading is a cased model but you have not set `do_lower_case` to False. We are setting `do_lower_case=False` for you but you may want to check this behavior.\n",
+      "2019-07-09 11:29:49,622 The pre-trained model you are loading is a cased model but you have not set `do_lower_case` to False. We are setting `do_lower_case=False` for you but you may want to check this behavior.\n"
      ]
     }
    ],
@@ -110,6 +110,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "543B [00:00, 181460.21B/s]\n",
+      "100%|███████████████████████████████████████████████████████████████| 374434776/374434776 [00:24<00:00, 15289369.41B/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 336/336 [00:00<00:00, 53269.06B/s]\n",
+      "100%|████████████████████████████████████████████████████████████████| 374434792/374434792 [00:49<00:00, 7572664.50B/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load ELMo embeddings\n",
+    "embeddings_all[0].append(DocumentPoolEmbeddings([ELMoEmbeddings(options_file=\"https://schweter.eu/cloud/eu-elmo/options.json\", \n",
+    "                                                                weight_file=\"https://schweter.eu/cloud/eu-elmo/weights.hdf5\")]))\n",
+    "embeddings_all[1].append(DocumentPoolEmbeddings([ELMoEmbeddings()]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -204,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -254,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -268,7 +291,9 @@
       "Calculating bert_cased embeddings for basque\n",
       "Calculating bert_cased embeddings for english\n",
       "Calculating bert_uncased embeddings for basque\n",
-      "Calculating bert_uncased embeddings for english\n"
+      "Calculating bert_uncased embeddings for english\n",
+      "Calculating elmo embeddings for basque\n",
+      "Calculating elmo embeddings for english\n"
      ]
     }
    ],
@@ -289,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -309,43 +334,53 @@
       "\t flair similarity: 0.9597\n",
       "\t bert_cased similarity: 0.9842\n",
       "\t bert_uncased similarity: 0.9823\n",
+      "\t elmo similarity: 0.983\n",
       "1. Medikuak gaixoa bazkari batera gonbidatu du\n",
       "\t flair similarity: 0.9283\n",
       "\t bert_cased similarity: 0.9879\n",
       "\t bert_uncased similarity: 0.978\n",
+      "\t elmo similarity: 0.9694\n",
       "2. Medikuak gaixoari esan zion, sendatuko zela\n",
       "\t flair similarity: 0.6528\n",
       "\t bert_cased similarity: 0.9237\n",
       "\t bert_uncased similarity: 0.9265\n",
+      "\t elmo similarity: 0.6919\n",
       "3. Irakasleak ikaslea bazkari batera gonbidatu zuen\n",
       "\t flair similarity: 0.8803\n",
       "\t bert_cased similarity: 0.9593\n",
       "\t bert_uncased similarity: 0.9406\n",
+      "\t elmo similarity: 0.8889\n",
       "4. Suhiltzaileak zientzialaria bazkari batera gonbidatu zuen\n",
       "\t flair similarity: 0.8831\n",
       "\t bert_cased similarity: 0.9216\n",
       "\t bert_uncased similarity: 0.9571\n",
+      "\t elmo similarity: 0.9141\n",
       "5. Medikuak ez zuen gaixoa bazkari batera gonbidatu\n",
       "\t flair similarity: 0.7409\n",
       "\t bert_cased similarity: 0.9599\n",
       "\t bert_uncased similarity: 0.9711\n",
+      "\t elmo similarity: 0.8575\n",
       "6. Gaixoak medikua bazkari batera gonbidatu zuen\n",
       "\t flair similarity: 0.9736\n",
       "\t bert_cased similarity: 0.9599\n",
       "\t bert_uncased similarity: 0.9908\n",
+      "\t elmo similarity: 0.9858\n",
       "7. Zuen gaixoa batera bazkari medikuak gonbidatu\n",
       "\t flair similarity: 0.7472\n",
       "\t bert_cased similarity: 0.9452\n",
       "\t bert_uncased similarity: 0.9738\n",
+      "\t elmo similarity: 0.806\n",
       "8. Midekauk goaxia bakrazi betraa gibondtau zeun\n",
       "\t flair similarity: 0.5672\n",
       "\t bert_cased similarity: 0.8261\n",
       "\t bert_uncased similarity: 0.7873\n",
+      "\t elmo similarity: 0.4573\n",
       "9. Utzi iezadazu laguntzen maletarekin\n",
       "\t flair similarity: 0.4903\n",
       "\t bert_cased similarity: 0.8404\n",
       "\t bert_uncased similarity: 0.8676\n",
-      "Scores: flair: 6, bert_cased: 5, bert_uncased: 4\n"
+      "\t elmo similarity: 0.4069\n",
+      "Scores: flair: 6, bert_cased: 5, bert_uncased: 4, elmo: 6\n"
      ]
     },
     {
@@ -360,11 +395,12 @@
         {
          "colorscale": "Blues",
          "type": "heatmap",
-         "uid": "870cf2d2-9d8c-4bd2-836e-bd29dc4ca46c",
+         "uid": "343881c3-adbe-4b65-b921-f8fd7388ad0d",
          "y": [
           "flair",
           "bert_cased",
-          "bert_uncased"
+          "bert_uncased",
+          "elmo"
          ],
          "z": [
           [
@@ -402,6 +438,18 @@
            0.9738,
            0.7873,
            0.8676
+          ],
+          [
+           0.983,
+           0.9694,
+           0.6919,
+           0.8889,
+           0.9141,
+           0.8575,
+           0.9858,
+           0.806,
+           0.4573,
+           0.4069
           ]
          ]
         }
@@ -412,21 +460,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"dea27199-8d45-4662-a5db-a6b95f8fabe1\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"d68356d3-837f-45b8-948e-204a1ebe361f\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"dea27199-8d45-4662-a5db-a6b95f8fabe1\")) {\n",
+       "                if (document.getElementById(\"d68356d3-837f-45b8-948e-204a1ebe361f\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        'dea27199-8d45-4662-a5db-a6b95f8fabe1',\n",
-       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"870cf2d2-9d8c-4bd2-836e-bd29dc4ca46c\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.9597, 0.9283, 0.6528, 0.8803, 0.8831, 0.7409, 0.9736, 0.7472, 0.5672, 0.4903], [0.9842, 0.9879, 0.9237, 0.9593, 0.9216, 0.9599, 0.9599, 0.9452, 0.8261, 0.8404], [0.9823, 0.978, 0.9265, 0.9406, 0.9571, 0.9711, 0.9908, 0.9738, 0.7873, 0.8676]]}],\n",
+       "                        'd68356d3-837f-45b8-948e-204a1ebe361f',\n",
+       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"343881c3-adbe-4b65-b921-f8fd7388ad0d\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\", \"elmo\"], \"z\": [[0.9597, 0.9283, 0.6528, 0.8803, 0.8831, 0.7409, 0.9736, 0.7472, 0.5672, 0.4903], [0.9842, 0.9879, 0.9237, 0.9593, 0.9216, 0.9599, 0.9599, 0.9452, 0.8261, 0.8404], [0.9823, 0.978, 0.9265, 0.9406, 0.9571, 0.9711, 0.9908, 0.9738, 0.7873, 0.8676], [0.983, 0.9694, 0.6919, 0.8889, 0.9141, 0.8575, 0.9858, 0.806, 0.4573, 0.4069]]}],\n",
        "                        {},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('dea27199-8d45-4662-a5db-a6b95f8fabe1');\n",
+       "var gd = document.getElementById('d68356d3-837f-45b8-948e-204a1ebe361f');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -469,43 +517,53 @@
       "\t flair similarity: 0.9852\n",
       "\t bert_cased similarity: 0.9965\n",
       "\t bert_uncased similarity: 0.984\n",
+      "\t elmo similarity: 0.962\n",
       "1. the doctor invited the patient for dinner\n",
       "\t flair similarity: 0.979\n",
       "\t bert_cased similarity: 0.9943\n",
       "\t bert_uncased similarity: 0.9781\n",
+      "\t elmo similarity: 0.9831\n",
       "2. the doctor has invited the patient for lunch\n",
       "\t flair similarity: 0.9799\n",
       "\t bert_cased similarity: 0.9846\n",
       "\t bert_uncased similarity: 0.9366\n",
+      "\t elmo similarity: 0.9655\n",
       "3. the patient did not invite the doctor for lunch\n",
       "\t flair similarity: 0.9127\n",
       "\t bert_cased similarity: 0.9667\n",
       "\t bert_uncased similarity: 0.8959\n",
+      "\t elmo similarity: 0.8674\n",
       "4. the doctor examined the patient before lunch\n",
       "\t flair similarity: 0.9134\n",
       "\t bert_cased similarity: 0.9579\n",
       "\t bert_uncased similarity: 0.8866\n",
+      "\t elmo similarity: 0.8302\n",
       "5. the doctor thought of inviting the patient for lunch\n",
       "\t flair similarity: 0.9302\n",
       "\t bert_cased similarity: 0.9763\n",
       "\t bert_uncased similarity: 0.8961\n",
+      "\t elmo similarity: 0.8981\n",
       "6. having lunch was not important for the patient and the doctor\n",
       "\t flair similarity: 0.8328\n",
       "\t bert_cased similarity: 0.9275\n",
       "\t bert_uncased similarity: 0.7899\n",
+      "\t elmo similarity: 0.7052\n",
       "7. despite having lunch together, the patient did not like the doctor\n",
       "\t flair similarity: 0.8063\n",
       "\t bert_cased similarity: 0.9369\n",
       "\t bert_uncased similarity: 0.8018\n",
+      "\t elmo similarity: 0.6889\n",
       "8. the surgeon proposed a snack to the sick person\n",
       "\t flair similarity: 0.8322\n",
       "\t bert_cased similarity: 0.951\n",
       "\t bert_uncased similarity: 0.8397\n",
+      "\t elmo similarity: 0.7378\n",
       "9. let me help you with that suitcase\n",
       "\t flair similarity: 0.6245\n",
       "\t bert_cased similarity: 0.8512\n",
       "\t bert_uncased similarity: 0.4863\n",
-      "Scores: flair: 5, bert_cased: 6, bert_uncased: 6\n"
+      "\t elmo similarity: 0.5137\n",
+      "Scores: flair: 5, bert_cased: 6, bert_uncased: 6, elmo: 6\n"
      ]
     },
     {
@@ -520,11 +578,12 @@
         {
          "colorscale": "Blues",
          "type": "heatmap",
-         "uid": "6bca7330-948b-4fff-9d9d-6acbac4315d7",
+         "uid": "bf14531f-52a6-42f6-986c-10074935bb24",
          "y": [
           "flair",
           "bert_cased",
-          "bert_uncased"
+          "bert_uncased",
+          "elmo"
          ],
          "z": [
           [
@@ -562,6 +621,18 @@
            0.8018,
            0.8397,
            0.4863
+          ],
+          [
+           0.962,
+           0.9831,
+           0.9655,
+           0.8674,
+           0.8302,
+           0.8981,
+           0.7052,
+           0.6889,
+           0.7378,
+           0.5137
           ]
          ]
         }
@@ -572,21 +643,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"01c3d81e-d710-43c3-bb14-375f5ce7240a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"d59ef165-e5b1-48d4-99a5-e0d8cf9c72b4\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"01c3d81e-d710-43c3-bb14-375f5ce7240a\")) {\n",
+       "                if (document.getElementById(\"d59ef165-e5b1-48d4-99a5-e0d8cf9c72b4\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '01c3d81e-d710-43c3-bb14-375f5ce7240a',\n",
-       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"6bca7330-948b-4fff-9d9d-6acbac4315d7\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\"], \"z\": [[0.9852, 0.979, 0.9799, 0.9127, 0.9134, 0.9302, 0.8328, 0.8063, 0.8322, 0.6245], [0.9965, 0.9943, 0.9846, 0.9667, 0.9579, 0.9763, 0.9275, 0.9369, 0.951, 0.8512], [0.984, 0.9781, 0.9366, 0.8959, 0.8866, 0.8961, 0.7899, 0.8018, 0.8397, 0.4863]]}],\n",
+       "                        'd59ef165-e5b1-48d4-99a5-e0d8cf9c72b4',\n",
+       "                        [{\"colorscale\": \"Blues\", \"type\": \"heatmap\", \"uid\": \"bf14531f-52a6-42f6-986c-10074935bb24\", \"y\": [\"flair\", \"bert_cased\", \"bert_uncased\", \"elmo\"], \"z\": [[0.9852, 0.979, 0.9799, 0.9127, 0.9134, 0.9302, 0.8328, 0.8063, 0.8322, 0.6245], [0.9965, 0.9943, 0.9846, 0.9667, 0.9579, 0.9763, 0.9275, 0.9369, 0.951, 0.8512], [0.984, 0.9781, 0.9366, 0.8959, 0.8866, 0.8961, 0.7899, 0.8018, 0.8397, 0.4863], [0.962, 0.9831, 0.9655, 0.8674, 0.8302, 0.8981, 0.7052, 0.6889, 0.7378, 0.5137]]}],\n",
        "                        {},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('01c3d81e-d710-43c3-bb14-375f5ce7240a');\n",
+       "var gd = document.getElementById('d59ef165-e5b1-48d4-99a5-e0d8cf9c72b4');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -659,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -671,12 +742,13 @@
     "        total_scores[0] += scores_all[i][0]\n",
     "        total_scores[1] += scores_all[i][1]\n",
     "        total_scores[2] += scores_all[i][2]\n",
+    "        total_scores[3] += scores_all[i][3]\n",
     "    print(f\"Total scores: \" + \", \".join(f\"{embed}: {scor}\" for embed, scor in zip(embedding_names, total_scores)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -685,8 +757,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total scores: flair: 6, bert_cased: 5, bert_uncased: 4\n",
-      "Total scores: flair: 5, bert_cased: 5, bert_uncased: 5\n"
+      "Total scores: flair: 6, bert_cased: 5, bert_uncased: 4, elmo: 6\n",
+      "Total scores: flair: 5, bert_cased: 6, bert_uncased: 6, elmo: 6\n"
      ]
     }
    ],
