--- a/calc_similarities.ipynb
+++ b/calc_similarities.ipynb
@@ -53,14 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -74,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -158,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -239,6 +232,10 @@
     "\n",
     "    q = Sentence(query)\n",
     "    embeddings.embed(q)\n",
+    "    \n",
+    "    print(q)\n",
+    "    print(q.embedding)\n",
+    "    \n",
     "    score = 0\n",
     "    \n",
     "    for i in range(len(sim_sentences)):\n",
@@ -273,7 +270,7 @@
     "        similarities_all[i].append(similarities)\n",
     "\n",
     "        \n",
-    "    return similarities_all, scores_all"
+    "    return similarities_all, scores_al"
    ]
   },
   {
@@ -287,14 +284,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating bert4c embeddings for english\n",
-      "Calculating bert4u embeddings for english\n",
-      "Calculating bert3c embeddings for english\n",
-      "Calculating bert3u embeddings for english\n",
-      "Calculating bert2c embeddings for english\n",
-      "Calculating bert2u embeddings for english\n",
-      "Calculating bert1c embeddings for english\n",
-      "Calculating bert1u embeddings for english\n"
+      "Calculating flair embeddings for basque\n",
+      "Sentence: \"medikuak gaixoa bazkaltzera gonbidatu zuen\" - 5 Tokens\n",
+      "tensor([-0.0302,  0.3141,  0.0454,  ..., -0.0182,  0.0214,  0.1127],\n",
+      "       grad_fn=<CatBackward>)\n",
+      "Sentence: \"gaixoak medikua bazkaltzera gonbidatu zuen\" - 5 Tokens\n",
+      "tensor([-0.0405,  0.3071,  0.0508,  ..., -0.0208,  0.0203,  0.0724],\n",
+      "       grad_fn=<CatBackward>)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-c46cb939bb0e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0membeddings_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Calculating {embedding_names[i]} embeddings for basque\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0msimilarities_all_eu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores_all_eu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msent_eu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0membeddings_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msimilarities_all_eu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores_all_eu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Calculating {embedding_names[i]} embeddings for english\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0msimilarities_all_en\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores_all_en\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msent_en\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0membeddings_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msimilarities_all_en\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores_all_en\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-16-b596e7652974>\u001b[0m in \u001b[0;36mcalculate\u001b[1;34m(gold_sentences, embeddings, similarities_all, scores_all)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[1;31m# Calculate similarities for each 'gold' sentence and accumulated score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[0msimilarities\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_similarities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msim_sentences\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0membeddings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m         \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
      ]
     }
    ],
